--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -4,6 +4,6 @@ avatar: /static/images/avatar.jpeg
 occupation: web前端开发
 company: 外包仔
 email: neilwang543@gmail.com
-github: https://github.com/neilwang543
+github: https://github.com/vanstoo
 chatgpt: https://chatgpt.wangsitu666.top
 ---
