--- a/data/blog/tools/appstore.mdx
+++ b/data/blog/tools/appstore.mdx
@@ -13,22 +13,22 @@ summary: '切换AppStore账号登录非国区AppStore以下载美区软件'
 
 ![进入appstore页面点击顶部头像切换账号](/static/images/appstore/step1.png)
 
-#### 2. 滑动当前页面到最底部
+### 2. 滑动当前页面到最底部
 
 ![滑动当前页面到底部](/static/images/appstore/step2.png)
 
-#### 3. 点击退出账号
+### 3. 点击退出账号
 
 ![点击退出账号](/static/images/appstore/step3.png)
 
-#### 4. 页面滑动到顶部，重新登陆
+### 4. 页面滑动到顶部，重新登陆
 
 ![重新滑动到顶部，重新登陆](/static/images/appstore/step4.png)
 
-#### 5. 输入外区账号（可从闲鱼购买）
+### 5. 输入外区账号（可从闲鱼购买）
 
 ![输入外区账号](/static/images/appstore/step5.png)
 
-#### 6. 登陆成功后搜索 appstore 下载/更新
+### 6. 登陆成功后搜索 appstore 下载/更新
 
 ![登陆成功后搜索appstore下载](/static/images/appstore/step8.png)
