feat: 去除草稿标志

--- a/data/blog/tools/hiddify.mdx
+++ b/data/blog/tools/hiddify.mdx
@@ -3,7 +3,7 @@ title: 'Hiddify指南'
 date: '2025-01-24'
 lastmod: '2025-01-24'
 tags: ['hiddify']
-draft: true
+draft: false
 summary: '各平台下载及使用hiddify客户端'
 ---
 
