feat: 同步tailwind-nextjs-starter-blog代码

--- a/data/blog/tools/hiddify.mdx
+++ b/data/blog/tools/hiddify.mdx
@@ -25,6 +25,7 @@ summary: '各平台下载及使用hiddify客户端'
    ![安装提示](/static/images/hiddify/安装提示.png)
    ![下载提示](/static/images/hiddify/下载提示.png)
 
+> [!Note]
 > 注：ios客户端需要非国服账号的appstore才可安装，可闲鱼购买下账号。
 
 ## 客户端安装
