--- a/data/blog/tools/shadowrocket.mdx
+++ b/data/blog/tools/shadowrocket.mdx
@@ -11,6 +11,7 @@ summary: '安装及使用shadowrocket添加订阅'
 
 ## 下载
 
+> [!NOTE]
 > 如果你的 iPhone/iPad 没有安装过 shadowrocket，请参考[切换 appstore 账号](/blog/tools/appstore) 查看下载安装方法。
 
 ![shadowrocket app](/static/images/shadowrocket/step1.png)
