feat： 更新网盘链接

--- a/data/blog/tools/hiddify.mdx
+++ b/data/blog/tools/hiddify.mdx
@@ -16,17 +16,30 @@ summary: '各平台下载及使用hiddify客户端'
 了解更多请查看[官方网站](https://hiddify.com/)
 
 ## 客户端下载
+> [!WARNING]
+   > 注：若非科学上网环境，请直接看**网盘下载**。
 
-1. 访问 [Hiddify 官方网站](https://hiddify.com/#app) 点击对应平台客户端下载。
-   ![官网下载](/static/images/hiddify/官网下载.png)
+1. **分享链接下载【推荐】**
 
-2. 在**分享链接**中点击导入按钮根据提示下载。
+   在分享链接中点击导入按钮根据提示下载。
    ![home页面](/static/images/hiddify/home页面.png)
    ![安装提示](/static/images/hiddify/安装提示.png)
    ![下载提示](/static/images/hiddify/下载提示.png)
 
+2. **官网下载**
+
+   访问 [Hiddify 官方网站](https://hiddify.com/#app) 点击对应平台客户端下载。
+   ![官网下载](/static/images/hiddify/官网下载.png)
+
+3. **网盘下载**
+
+   [夸克网盘下载【推荐】](https://pan.quark.cn/s/6ba1f899abe4) 
+   
+   [百度网盘下载](https://pan.baidu.com/s/1AsS4DKwZm04rvAgjrvepKw?pwd=tya5) 
+
+
 > [!Note]
-> 注：ios客户端需要非国服账号的appstore才可安装，可闲鱼购买下账号。
+> 注：ios客户端需要非国服账号的appstore才可安装，可闲鱼购买下账号，app下载免费。
 
 ## 客户端安装
 
