--- a/data/blog/tools/hiddify.mdx
+++ b/data/blog/tools/hiddify.mdx
@@ -13,7 +13,7 @@ summary: '各平台下载及使用hiddify客户端'
 
 一款由伊朗开发的**无广告、安全且开源**的多平台代理工具，适用于 iOS、macOS、Windows 和Android。
 支持广泛的代理协议，包括 Hysteria2、TUIC、SSH、Reality、VMess、VLESS、Trojan等协议。
-了解更多请查看[官方网站](https://hiddify.com/)
+了解更多请查看[官方网站](https://hiddify.com/)。
 
 ## 客户端下载
 > [!WARNING]
