--- a/data/blog/tools/hiddify.mdx
+++ b/data/blog/tools/hiddify.mdx
@@ -66,7 +66,9 @@ summary: '各平台下载及使用hiddify客户端'
 2. 复制**Share Link**后，app内**添加新的配置文件**，选择**从剪贴板添加**
    ![复制链接](/static/images/hiddify/复制链接.png)
    ![导入步骤](/static/images/hiddify/导入步骤.png)
-3. 移动端app内扫描二维码导入
+3. 移动端app内和客户端类似，支持扫描二维码和剪贴板导入
+   ![导入步骤](/static/images/hiddify/iPhone导入.png)
+
 
 ## 结语
 
