--- a/data/blog/tools/hiddify.mdx
+++ b/data/blog/tools/hiddify.mdx
@@ -33,10 +33,7 @@ summary: '各平台下载及使用hiddify客户端'
 
 3. **网盘下载**
 
-   [夸克网盘下载【推荐】](https://pan.quark.cn/s/6ba1f899abe4) 
-   
-   [百度网盘下载](https://pan.baidu.com/s/1AsS4DKwZm04rvAgjrvepKw?pwd=tya5) 
-
+   [夸克网盘下载](https://pan.quark.cn/s/6ba1f899abe4) 
 
 > [!Note]
 > 注：ios客户端需要非国服账号的appstore才可安装，可闲鱼购买下账号，app下载免费。
